    state information" is added as well to display the
    information of the saved state. (Wengier)
  - DOSBox-X will now use native dialog box to display
    quit warnings and save state errors. (Wengier)
  - Changed some DOS error messages (such as "Illegal
    command" which now reads "Bad command or filename")
    similar to real DOS systems. (Wengier)
  - Improved the -z (move virtual drive Z:) function of
    MOUNT command. You can move the virtual drive as
    many times as you want, and save/load states will
    work even after you move the Z: drive. (Wengier)
  - Enhanced the config option "freesizecap" to allow
    the setting "fixed" which is the same as "false",
    and a new setting "relative" is added, which will
    be similar to the setting "fixed" but the reported
    free disk size will also change relative to the
    change of the free disk size ever since. (Wengier)
  - Added support for Opus CD-DA tracks by porting and
    cleaning up the source code from other projects.
    Many thanks to Marty Shepard and kcgen. (Wengier)
  - Support for FluidSynth MIDI Synthesizer is now
    included in the MinGW builds by default just like
    Visual Studio builds. Set "mididevice=fluidsynth"
    and a soundfont file to use it. (Wengier)
  - Enabled xBRZ scaler for Visual Studio SDL2 builds
    just like Visual Studio SDL1 builds. (Wengier)
  - Added menu item "Show Sound Blaster configuration"
    under "Sound" menu to show the current information
    about Sound Blaster, and also menu item "Show MIDI
    device configuration" (also under "Sound" menu)
    to show information about the current MIDI device
    such as the soundfont file in use. (Wengier)
  - Added "Mount multiple disk/CD images" option to the
    mounting options of the Drive menu to allow users
    to mount more than one disk/CD images to a drive,
    swappable from the menu. Also added separators to
    the Drive submenu to make it look better. (Wengier)