@@ -32,6 +32,8 @@
   - Changed some DOS error messages (such as "Illegal
     command" which now reads "Bad command or filename")
     similar to real DOS systems. (Wengier)
+  - ADDKEY command now appears as a program on Z drive
+    instead of a shell command. (Wengier)
   - Improved the -z (move virtual drive Z:) function of
     MOUNT command. You can move the virtual drive as
     many times as you want, and save/load states will
